ok: Update askap.yaml

--- a/datasets/askap.yaml
+++ b/datasets/askap.yaml
@@ -17,6 +17,7 @@ ManagedBy: "[Australia Telescope National Facility, CSIRO](http://www.atnf.csiro
 Citation: Please see the [ATNF acknowledgement page](https://www.atnf.csiro.au/resources/publications/atnf-publication-acknowledgement-statements/) for full citation instructions. 
 UpdateFrequency: Roughly quarterly
 Tags:
+  - aws-pds
   - astronomy
   - archives
 License: CC-BY-4.0. Attribution required for refereed scientific papers.
