--- a/datasets/deepdrug-dpeb.yml
+++ b/datasets/deepdrug-dpeb.yml
@@ -14,7 +14,7 @@ License: MIT
 Citation: "Sajol MSI et al. DeepDrug Protein Embeddings Bank (DPEB) was accessed on [DATE] at https://registry.opendata.aws/dpeb"
 Resources:
   - Description: Multimodal human protein embeddings (AlphaFold2, BioEmbeddings, ESM-2, ProtVec) with JSONL-formatted metadata containing FASTA, UniProt IDs, and embeddings.
-    ARN: arn:aws:s3:::deepdrug-dpeb-human-protein-embeddings
+    ARN: arn:aws:s3:::deepdrug-dpeb
     Region: us-cst-1
     Type: S3 Bucket
     Explore:
