--- a/datasets/st-open-data.yaml
+++ b/datasets/st-open-data.yaml
@@ -25,4 +25,5 @@ DataAtWork:
     - Title: "SpaceEye-T Data Manual"
       URL: https://www.si-imaging.com/page/72?sca=SpaceEye-T
       AuthorName: SI-Imaging Services
-ADXCategories: Resources Data
+ADXCategories: 
+  - Resources Data
