update S3 ARN and region remove deprecated deepdrug-dpeb.yml

--- a/datasets/deepdrug-dpeb.yaml
+++ b/datasets/deepdrug-dpeb.yaml
@@ -15,8 +15,8 @@ License: MIT
 Citation: "Sajol MSI et al. DeepDrug Protein Embeddings Bank (DPEB) was accessed on [DATE] at https://registry.opendata.aws/dpeb"
 Resources:
   - Description: Multimodal human protein embeddings (AlphaFold2, BioEmbeddings, ESM-2, ProtVec) with JSONL-formatted metadata containing FASTA, UniProt IDs, and embeddings.
-    ARN: arn:aws:s3:::deepdrug-dpeb-human-protein-embeddings
-    Region: us-east-1
+    ARN: arn:aws:s3:::deepdrug-dpeb
+    Region: us-west-2
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
