Add ivrit-ai-audio-v2.yaml dataset file

--- a/datasets/ivrit-ai-audio-v2.yaml
+++ b/datasets/ivrit-ai-audio-v2.yaml
@@ -5,13 +5,9 @@ Contact: info@ivrit.ai
 ManagedBy: ivrit.ai
 UpdateFrequency: Updated several times per year
 Tags:
-  - hebrew
-  - speech
-  - language
-  - asr
-  - crowdsourced
-  - ai
-  - ml
+  - natural language processing
+  - automatic speech recognition
+  - speech processing
 License: >
   ivrit.ai license (modified CC-BY, permitting use for training AI models only and prohibiting deepfake generation; see https://www.ivrit.ai/en/license-faqs/ for full terms)
 Citation: >
