--- a/datasets/aws-public-blockchain.yaml
+++ b/datasets/aws-public-blockchain.yaml
@@ -13,6 +13,7 @@ Description: >
   - XRP Ledger              - SonarX  - <code>s3://aws-public-blockchain/v1.1/sonarx/xrp/</code><br>
   - Stellar(<a href="https://developers.stellar.org/docs/learn/fundamentals/data-format/xdr" rel="noopener noreferrer">XDR files</a>)              - Stellar - <code>s3://aws-public-blockchain/v1.1/stellar/</code><br>
   - The Open Network (TON)  - TON - <code>s3://aws-public-blockchain/v1.1/ton/</code><br>
+  - Cronos                  - Cronos - <code>s3://aws-public-blockchain/v1.1/cronos/</code><br>
   </br> 
 
   <h4>Become a Data Provider</h4>
