ok: Update aws-public-blockchain.yaml

--- a/datasets/aws-public-blockchain.yaml
+++ b/datasets/aws-public-blockchain.yaml
@@ -25,6 +25,7 @@ Contact: aws-blockchain-data@amazon.com
 ManagedBy: "[Amazon Web Services](https://aws.amazon.com/)"
 UpdateFrequency: New data is delivered daily to the current date folders Parquet files.
 Tags:
+  - aws-pds
   - blockchain
   - web3
 License: https://github.com/aws-samples/digital-assets-examples/blob/main/LICENSE
