minor fixes for logos

--- a/datasets/humancellatlas.yaml
+++ b/datasets/humancellatlas.yaml
@@ -12,7 +12,7 @@ Documentation: https://data.humancellatlas.org/
 
 Contact: https://data.humancellatlas.org/contact
 
-ManagedBy: UC Santa Cruz Genomics Institute, University of California, Santa Cruz (UCSC)
+ManagedBy: UC Santa Cruz Genomics Institute, University of California, Santa Cruz, UCSC
 
 UpdateFrequency: Monthly
 
