--- a/datasets/proteingym.yaml
+++ b/datasets/proteingym.yaml
@@ -3,7 +3,7 @@ Description: |
   ProteinGym is a benchmark suite for assessing the performance of protein fitness prediction and design models. It comprises a large curated collection of 200+ high-throughput experimental assays (~3M mutated sequences), as well as clinical annotations from experts about the pathogenicity of mutants in over 3k human genes.
 Documentation: https://github.com/OATML-Markslab/ProteinGym/blob/main/README.md
 Contact: pascal_notin@hms.harvard.edu
-ManagedBy: "Harvard Medical School; University of Oxford"
+ManagedBy: "Harvard Medical School, University of Oxford"
 UpdateFrequency: Quarterly
 Tags:
   - aws-pds
