ok: Update saag_aws_yaml.yaml

--- a/datasets/saag_aws_yaml.yaml
+++ b/datasets/saag_aws_yaml.yaml
@@ -32,6 +32,6 @@ DataAtWork:
       AuthorURL: https://scholar.google.com/citations?user=peK6SY4AAAAJ&hl=en&oi=ao
   Publications:
     - Title: Advancing South American Water and Climate Science through Multidecadal Convection-Permitting Modeling
-      URL: https://doi.org/10.1175/BAMS-D-22-0226.1.
+      URL: https://doi.org/10.1175/BAMS-D-22-0226.1
       AuthorName: Dominguez et al. (2024), Bull. Amer. Meteor. Soc., 105, E32–E44
-      AuthorURL:
+      AuthorURL: https://doi.org/10.1175/BAMS-D-22-0226.1
