ok: Update saag_aws_yaml.yaml

--- a/datasets/saag_aws_yaml.yaml
+++ b/datasets/saag_aws_yaml.yaml
@@ -1,7 +1,9 @@
 Name: Multidecadal Convection-permitting Simulations of Current and Future Climate over South America using WRF 
-Description: A high-resolution convection-permitting climate change simulation was performed at 4 km grid spacing covering the entire continent of South America. The simulation was performed using Weather Research Forecasting (WRF) model. This dataset is from a 22-year simulation representing the current climate between January 2001 and January 2022. ERA5 data was used to initialize the model and force boundary every 3 hours. This high-resolution simulation allowed for much improved representation of topography, convection, and orographic precipitation and snowpack, resulting in a one-of-a-kind dataset that can be used to study the hydroclimate processes in South America. A second simulation was then performed using the ERA5 weather with a climate perturbation from the CESM2-Large Ensemble (LENS2) for near the end of the 21st century (2060-2080). Monthly mean change signals were computed from the LENS2 and applied to the sub-daily ERA5 data to create the future simulation data used to drive the WRF model. This dataset provides a warmer and wetter 2060-2080 future scenario for South America using the same 2001-2022 day-to-day weather. The combined datasets will enable myriad research studies, spanning fundamental and applied research into regional hydroclimatic change over South America and corresponding impacts across sectors. 
-Documentation: https://rda.ucar.edu/datasets/d616000/# This website describes the current climate simulation files and variables.  The future climate files are exactly the same, excpet for file names indicating the future simulation.
-Contact:  rdahelp@ucar.edu, Erin Dougherty, doughert@ucar.edu; Andy Newman, anewman@ucar.edu
+Description: |
+  A high-resolution convection-permitting climate change simulation was performed at 4 km grid spacing covering the entire continent of South America. The simulation was performed using Weather Research Forecasting (WRF) model. This dataset is from a 22-year simulation representing the current climate between January 2001 and January 2022. ERA5 data was used to initialize the model and force boundary every 3 hours. This high-resolution simulation allowed for much improved representation of topography, convection, and orographic precipitation and snowpack, resulting in a one-of-a-kind dataset that can be used to study the hydroclimate processes in South America. A second simulation was then performed using the ERA5 weather with a climate perturbation from the CESM2-Large Ensemble (LENS2) for near the end of the 21st century (2060-2080). Monthly mean change signals were computed from the LENS2 and applied to the sub-daily ERA5 data to create the future simulation data used to drive the WRF model. This dataset provides a warmer and wetter 2060-2080 future scenario for South America using the same 2001-2022 day-to-day weather. The combined datasets will enable myriad research studies, spanning fundamental and applied research into regional hydroclimatic change over South America and corresponding impacts across sectors. 
+Documentation: |
+  https://rda.ucar.edu/datasets/d616000/# This website describes the current climate simulation files and variables.  The future climate files are exactly the same, excpet for file names indicating the future simulation.
+Contact:  "rdahelp@ucar.edu, Erin Dougherty, doughert@ucar.edu; Andy Newman, anewman@ucar.edu"
 ManagedBy: "[National Center for Atmospheric Research](https://ncar.ucar.edu/)"
 UpdateFrequency: Rare. This dataset is unlikely to be updated unless there are file problems discovered in the AWS copy.
 Tags:
@@ -30,7 +32,7 @@ DataAtWork:
       AuthorName: Erin Dougherty
       AuthorURL: https://scholar.google.com/citations?user=peK6SY4AAAAJ&hl=en&oi=ao
   Publications:
-    - Title: Advancing South American Water and Climate Science through Multidecadal Convection-Permitting Modeling
+    - Title: "Advancing South American Water and Climate Science through Multidecadal Convection-Permitting Modeling"
       URL: https://doi.org/10.1175/BAMS-D-22-0226.1
-      AuthorName: Dominguez et al. (2024), Bull. Amer. Meteor. Soc., 105, E32–E44
+      AuthorName: "Dominguez et al. (2024), Bull. Amer. Meteor. Soc., 105, E32–E44"
       AuthorURL: https://doi.org/10.1175/BAMS-D-22-0226.1
