--- a/datasets/colorado-elevation-data.yaml
+++ b/datasets/colorado-elevation-data.yaml
@@ -2,7 +2,7 @@ Name: State of Colorado Elevation Data
 Description: The State of Colorado has gathered public historical elevation data.
 Documentation: https://docs.google.com/document/d/1HMO-d4cCrBvFa2F6-N3lhP6rkezlvBmSUFA5S8t_ekQ/edit?usp=sharing
 Contact: oit_gis@state.co.us
-ManagedBy: State of Colorado Governor's Office of Information Technology OIT GIS team
+ManagedBy: State of Colorado Governors Office of Information Technology OIT GIS team
 UpdateFrequency: Periodically
 Tags:
   - aws-pds
