--- a/datasets/ideam-radares.yaml
+++ b/datasets/ideam-radares.yaml
@@ -29,9 +29,10 @@ DataAtWork:
     - Title: Read and plot Sigmet files available on AWS using Xradar
       URL: https://docs.openradarscience.org/projects/xradar/en/stable/notebooks/Read-plot-Sigmet-data-from-AWS.html
       AuthorName: Alfonso Ladino
-    - Title: Taller de datos científicos con Python y R - AtmosCol 2023
-      URL: https://projectpythia.org/AtmosCol-2023/notebooks/2.acceso-datos/2.2.Radares.html
+    - Title: Ciencia de Datos Hidrometeorológicos con Python
+      URL: https://projectpythia.org/AtmosCol-2023/radares
       AuthorName: Alfonso Ladino, Nicole Rivera, Max Grover
     - Title: Specific Differential Phase (KDP) retrieval methods comparison
       URL: https://projectpythia.org/radar-cookbook/notebooks/example-workflows/kdp-comparison.html
       AuthorName: Alfonso Ladino, Max Grover
+
