--- a/datasets/ideam-radares.yaml
+++ b/datasets/ideam-radares.yaml
@@ -33,5 +33,6 @@ DataAtWork:
       URL: https://projectpythia.org/AtmosCol-2023/radares
       AuthorName: Alfonso Ladino, Nicole Rivera, Max Grover
     - Title: Specific Differential Phase (KDP) retrieval methods comparison
-      URL: https://projectpythia.org/radar-cookbook/notebooks/example-workflows/kdp-comparison.html
+      URL: https://projectpythia.org/radar-cookbook/notebooks/example-workflows/kdp-comparison/
       AuthorName: Alfonso Ladino, Max Grover
+
