Corrected S3 bucket ARN and description

--- a/datasets/dmi-danra-05.yaml
+++ b/datasets/dmi-danra-05.yaml
@@ -26,8 +26,8 @@ Tags:
   - zarr
 License: DMI Reanalysis dataset v0.5 is distributed under the [Creative Commons License CC BY 4.0](https://creativecommons.org/licenses/by/4.0/legalcode.en)
 Resources:
-  - Description: DMI's Open Data Forecasts
-    ARN: arn:aws:s3:::dmi-opendata
+  - Description: DMI Reanalysis dataset v0.5
+    ARN: arn:aws:s3:::dmi-danra-05
     Region: eu-north-1
     Type: S3 Bucket
 DataAtWork:
