Revise license and citation details in YAML file
Updated license information and added citation guidelines.

--- a/datasets/st-open-data.yaml
+++ b/datasets/st-open-data.yaml
@@ -11,7 +11,12 @@ Tags:
   - disaster response
   - geospatial
   - image processing
-License: Creative Commons Attribution-NonCommercial 4.0 International
+License: |
+  Creative Commons Attribution-NonCommercial 4.0 International.
+  Please visit [our Terms of Use webpage](https://si-imaging.com/page/73) to review the following documents:
+  - ST-1 Product Terms of Use
+  - ST-1 License and Attribution Guide for Open Data
+Citation: When publicly post of ST products Open Data unedited, "SpaceEye-T © [Year] Satrec Initiative (Licensed under CC BY-NC 4.0)". When publicly post derivative data created by using ST products Open Data, "SpaceEye-T-derived data © [Year] Satrec Initiative (Originally licensed under CC BY-NC 4.0)".
 ManagedBy: "[SI Imaging Services](https://www.si-imaging.com/)"
 Resources:
   - Description: SpaceEye-T Imagery Collection
