Update License and Citation in st-open-data.yaml

--- a/datasets/st-open-data.yaml
+++ b/datasets/st-open-data.yaml
@@ -13,7 +13,8 @@ Tags:
   - image processing
 License: |
   Creative Commons Attribution-NonCommercial 4.0 International.
-  Please visit [our Terms of Use webpage](https://si-imaging.com/page/73) to review the following documents:
+  Please visit: [our Terms of Use webpage](https://si-imaging.com/page/73)
+  to review the following documents:
   - ST-1 Product Terms of Use
   - ST-1 License and Attribution Guide for Open Data
 Citation: |
