add missing author names

--- a/datasets/depmap-omics-ccle.yaml
+++ b/datasets/depmap-omics-ccle.yaml
@@ -33,11 +33,14 @@ DataAtWork:
   Tutorials:
     - Title: DepMap Omics CCLE data on the AWS Open Data Registry
       URL: https://github.com/broadinstitute/depmap-omics-ccle
+      AuthorName: Devin McCabe
   Tools & Applications:
     - Title: The Cancer Dependency Map (DepMap)
       URL: https://depmap.org
+      AuthorName: Arafeh, Shibue, Dempster et al.
     - Title: Cancer Cell Line Encyclopedia (CCLE)
       URL: https://sites.broadinstitute.org/ccle
+      AuthorName: Ghandi, Huang, Jané-Valbuena et al.
   Publications:
     - Title: Next-generation characterization of the Cancer Cell Line Encyclopedia
       URL: https://www.nature.com/articles/s41586-019-1186-3
