Revise license and citation details in st-open-data.yaml
Updated license information and citation guidelines in the YAML file.

--- a/datasets/st-open-data.yaml
+++ b/datasets/st-open-data.yaml
@@ -12,18 +12,14 @@ Tags:
   - geospatial
   - image processing
 License: |
-  Creative Commons Attribution-NonCommercial 4.0 International.
-  Please visit: [our Terms of Use webpage](https://si-imaging.com/page/73)
-  to review the following documents:
-  - ST-1 Product Terms of Use
-  - ST-1 License and Attribution Guide for Open Data
+  Creative Commons Attribution 4.0 International (CC BY 4.0).
+  For more information, See the document "ST-1 Product Terms of Use" at [our Terms of Use webpage](https://si-imaging.com/page/73)
 Citation: |
   When publicly posting ST products Open Data unedited, use:
   "SpaceEye-T © [Year] Satrec Initiative (Licensed under CC BY-NC 4.0)".
   
   When publicly posting derivative data created by using ST products Open Data, use:
   "SpaceEye-T-derived data © [Year] Satrec Initiative (Originally licensed under CC BY-NC 4.0)".
-
 ManagedBy: "[SI Imaging Services](https://www.si-imaging.com/)"
 Resources:
   - Description: SpaceEye-T Imagery Collection
