--- a/datasets/askap.yaml
+++ b/datasets/askap.yaml
@@ -27,6 +27,10 @@ Resources:
     Region: ap-southeast-2
     Type: S3 Bucket
     RequesterPays: False
+  - Description: Notifications for new <your dataset’s name> data
+    ARN: arn:aws:sns:ap-southeast-2:336305517014:racs-low1-object_created
+    Region: sp-southeast-2
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
     - Title: CSIRO ASKAP Science Data Archive User Guide
