--- a/datasets/mosaic.yaml
+++ b/datasets/mosaic.yaml
@@ -23,6 +23,20 @@ Resources:
     - '[Browse Bucket](https://mosaicfmri.s3.amazonaws.com/index.html)'
 DataAtWork:
   Tutorials:
+    - Title: Preprocess fMRI datasets with MOSAIC shared pipeline
+      URL: https://github.com/blahner/mosaic-preprocessing
+      AuthorName: Benjamin Lahner
+    - Title: MOSAIC Python package (mosaic-dataset)
+      URL: https://pypi.org/project/mosaic-dataset/
+      AuthorName: Mayukh Deb
+    - Title: Download MOSAIC data, visualize fMRI responses, load and run brain-optimized models (Jupyter notebook)
+      URL: https://github.com/murtylab/mosaic-dataset/blob/master/examples/mosaic-starter.ipynb
+      NotebookURL: https://github.com/murtylab/mosaic-dataset/blob/master/examples/mosaic-starter.ipynb
+      AuthorName: Mayukh Deb
+    - Title: Run a synthetic localizer experiment using MOSAIC's brain-optimized models (Jupyter notebook)
+      URL: https://github.com/murtylab/mosaic-dataset/blob/master/examples/mosaic_synthetic_localizer.ipynb
+      NotebookURL: https://github.com/murtylab/mosaic-dataset/blob/master/examples/mosaic_synthetic_localizer.ipynb
+      AuthorName: Benjamin Lahner
     - Title: Load HDF5 file (Jupyter notebook)
       URL: https://github.com/blahner/mosaic-preprocessing/blob/main/src/fmriDatasetPreparation/create_hdf5/load_hdf5.ipynb
       NotebookURL: https://github.com/blahner/mosaic-preprocessing/blob/main/src/fmriDatasetPreparation/create_hdf5/load_hdf5.ipynb
