changed documentation url from preprocessing code to project page url

--- a/datasets/mosaic.yaml
+++ b/datasets/mosaic.yaml
@@ -1,6 +1,6 @@
 Name: Meta-Organized Stimuli And fMRI Imaging data for Computational modeling (MOSAIC)
 Description: This extensible dataset, MOSAIC, aggregates individual functional magnetic resonance imaging (fMRI) datasets by leveraging a shared preprocessing pipeline and stimulus curation procedure. This dataset aggregation procedure achieves the scale necessary for neural network training and the diversity needed for generalizable results.
-Documentation: https://github.com/blahner/mosaic-preprocessing
+Documentation: https://blahner.github.io/MOSAICfmri/
 Contact: blahner@mit.edu
 ManagedBy: Massachusetts Institute of Technology, Georgia Tech
 UpdateFrequency: New data is uploaded as researchers preprocess their fMRI data according to MOSAIC format and submit.
