--- a/datasets/braidyn-bc_cued-lever-pull.yaml
+++ b/datasets/braidyn-bc_cued-lever-pull.yaml
@@ -27,11 +27,10 @@ Tags:
   - behavioral tracking
 License: Creative Commons Attribution 4.0 International (CC-BY 4.0)
 Resources:
-  - Description:
-    ARN:
-    Region:
-    Type:
-    Explore:
+  - Description: "BraiDyn-BC: Cued lever-pull task dataset"
+    ARN: arn:aws:s3:::braidyn-bc-buckets
+    Region: ap-northeast-1
+    Type: S3 bucket
 DataAtWork:
   Tutorials:
     - Title: Detailed usage tutorials on Google Colab
