--- a/datasets/met-office-uk-site-specific-probabilistic.yaml
+++ b/datasets/met-office-uk-site-specific-probabilistic.yaml
@@ -1,11 +1,12 @@
 Name: Met Office UK Site-Specific Blended Probabilistic Forecast on a 2-year rolling archive 
-Description: The flagship Numerical Weather Prediction model developed and used at the Met Office, is the Unified Model, the same model is used for both weather and climate prediction. For weather forecasting the Met Office runs several configurations of the Unified Model as part of its operational Numerical Weather Prediction suite. Uncovering 2 years' worth of historical data, updated regularly with a time delay.
-  The UK Site-Specific Blended Probabilistic Forecast is a post processed regional downscaled configuration of the Unified Model, covering the UK and Ireland. The United Kingdom domain is a 2km resolution grid. Formatted via NetCDF.
-  Data is blended from up to 4 forecasting models; an extrapolation nowcast (MONOW), UKV, MOGREPS-UK, and MOGREPS-G.
+Description: We have developed a new blended probabilistic forecast system that takes outputs from our Numerical Weather Prediction (NWP) models. 
+ This system blends multiple gridded forecasts using a probabilistic approach to produce a set of percentile forecasts for a range of surface weather variables.
+ It also calculates a “most likely” weather type, out to a range of seven days, to produce site-specific forecasts.
+ It is recommended for users who want to access site-specific forecasts in a probabilistic way, with the flexibility to select what data they need for their specific use.
 Documentation: https://www.metoffice.gov.uk/services/data/external-data-channels
 Contact: servicedesk@metoffice.gov.uk. Service desk is only available Mon – Fri, 09:00 until 17:00 UTC (-1 hour during BST).  As a non-operational service we aim to respond to any service support enquiries within 3-5 business days.
 ManagedBy: "[Met Office](https://www.metoffice.gov.uk/)"
-UpdateFrequency: Updates for specific parameters can be at least one of 15 minutely, 1 hourly, 3 hourly or 6 hourly. Please refer to the specific documentation for the details.
+UpdateFrequency: This is a dynamic dataset continuously updated by blending multiple data sources. Please refer to the specific documentation for the details.
 Collabs:
   ASDI:
     Tags:
