--- a/datasets/transpiration.yaml
+++ b/datasets/transpiration.yaml
@@ -5,6 +5,7 @@ Contact: iwmiwaplus@gmail.com
 ManagedBy: "[IWMI](https://www.iwmi.org/)"
 UpdateFrequency: None
 Tags:
+  - aws-pds
   - surface water
   - irrigated cropland
   - ground water
@@ -30,3 +31,4 @@ DataAtWork:
       URL: https://public.tableau.com/app/profile/iwmi.wa/viz/Voltabasinvertical/Merged?publish=yes
       AuthorName: iwmiwaplus
       AuthorURL: https://public.tableau.com/app/profile/iwmi.wa
+
