--- a/datasets/met-office-uk-land-surface-observations.yaml
+++ b/datasets/met-office-uk-land-surface-observations.yaml
@@ -1,6 +1,6 @@
 Name: Met Office UK Land Surface Observations on a 2-year rolling archive
-Description: The United Kingdom Composite, Surface Rain Rate Estimate is an international radar composite produced by Met Office (UK). 
-  This is a composite, radar reflectivity derived, surface rain rate estimate product in HDF5 code from stations covering the United Kingdom.
+Description: Observations collected from about 260 UK land locations, on average 40km apart. These data represent the wider area around the location and are not be unduly influenced by local effects.
+ Each location produces observations at minutely intervals and transmits data to be processed at least hourly.
 Documentation: https://www.metoffice.gov.uk/services/data/external-data-channels
 Contact: servicedesk@metoffice.gov.uk. Service desk is only available Mon – Fri, 09:00 until 17:00 UTC (-1 hour during BST).  As a non-operational service we aim to respond to any service support enquiries within 3-5 business days.
 ManagedBy: "[Met Office](https://www.metoffice.gov.uk/)"
