update marine description

--- a/datasets/met-office-marine-surface-observations.yaml
+++ b/datasets/met-office-marine-surface-observations.yaml
@@ -1,5 +1,6 @@
 Name: Met Office Marine Surface Observations on a 2-year rolling archive
 Description: Observations collected from autonomous marine observing systems placed on moored buoys, light vessels and both manual observations reported by ships crew and also automatic observations collected from autonomous marine observing systems placed on ships.
+ Each location produces observations at hourly intervals.
 Documentation: https://www.metoffice.gov.uk/services/data/external-data-channels
 Contact: servicedesk@metoffice.gov.uk. Service desk is only available Mon – Fri, 09:00 until 17:00 UTC (-1 hour during BST).  As a non-operational service we aim to respond to any service support enquiries within 3-5 business days.
 ManagedBy: "[Met Office](https://www.metoffice.gov.uk/)"
