ok: Update roa.yaml

--- a/datasets/roa.yaml
+++ b/datasets/roa.yaml
@@ -5,6 +5,7 @@ Contact: https://github.com/SEE-GEO/roa
 ManagedBy: "[Geoscience and Remote Sensing at Chalmers University of Technology](https://www.chalmers.se/en/departments/see/research/geo)"
 UpdateFrequency: At most, yearly
 Tags:
+  - aws-pds
   - agriculture
   - analysis ready data
   - atmosphere
