--- a/datasets/askap.yaml
+++ b/datasets/askap.yaml
@@ -29,7 +29,7 @@ Resources:
     RequesterPays: False
   - Description: Notifications for ASKAP data
     ARN: arn:aws:sns:ap-southeast-2:336305517014:askap-odp-object_created
-    Region: sp-southeast-2
+    Region: ap-southeast-2
     Type: SNS Topic
 DataAtWork:
   Tutorials:
