--- a/datasets/askap.yaml
+++ b/datasets/askap.yaml
@@ -27,7 +27,7 @@ Resources:
     Region: ap-southeast-2
     Type: S3 Bucket
     RequesterPays: False
-  - Description: Notifications for ASKAP data
+  - Description: Notifications for new ASKAP data
     ARN: arn:aws:sns:ap-southeast-2:336305517014:askap-odp-object_created
     Region: ap-southeast-2
     Type: SNS Topic
