Update quantiles shared

--- a/datasets/roa.yaml
+++ b/datasets/roa.yaml
@@ -24,7 +24,7 @@ Tags:
 License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
 Citation: "Please refer to https://github.com/SEE-GEO/roa#5-how-to-cite for instructions on how to cite the RoA data."
 Resources:
-  - Description: RoA expected rain rate and quantiles at levels 16% and 84% in Zarr format
+  - Description: RoA expected rain rate and quantiles at levels 5%, 16%, 25%, 50%, 75%, 84%, and 95% in Zarr format
     ARN: arn:aws:s3:::rainoverafrica
     Region: us-west-2
     Type: S3 Bucket
