ok: Update roa.yaml

--- a/datasets/roa.yaml
+++ b/datasets/roa.yaml
@@ -28,7 +28,7 @@ Resources:
     ARN: arn:aws:s3:::rainoverafrica
     Region: us-west-2
     Type: S3 Bucket
-  - Description: Description: Notifications for new Rain over Africa data
+  - Description: Notifications for new Rain over Africa data
     ARN: arn:aws:sns:us-west-2:261854712492:rainoverafrica-object_created
     Region: us-west-2
     Type: SNS Topic
