Update description page URL

--- a/datasets/wilsonl.in-search.yaml
+++ b/datasets/wilsonl.in-search.yaml
@@ -1,6 +1,6 @@
 Name: "search.wilsonl.in Web Search Index Crawl + Text Embeddings"
 Description: 'search.wilsonl.in is a web search engine built from scratch using neural embeddings, RocksDB, HNSW. This dataset contains the index, source documents, and text embeddings for 280M pages.'
-Documentation: https://blog.wilsonl.in/search-engine-open-data
+Documentation: https://github.com/wilsonzlin/datasets/search-engine-open-data/
 Contact: wl@wilsonl.in
 ManagedBy: Wilson Lin
 UpdateFrequency: The dataset has been finalized and will not be updated.
