--- a/datasets/wilsonl.in-search.yaml
+++ b/datasets/wilsonl.in-search.yaml
@@ -23,7 +23,7 @@ DataAtWork:
       URL: https://blog.wilsonl.in/search-engine/
       AuthorName: Wilson Lin
   Tutorials:
-    - Title: Notebook Tutorial
+    - Title: "Get To Know A Dataset: search.wilsonl.in Web Search Index Crawl + Text Embeddings"
       URL: https://github.com/wilsonzlin/datasets/blob/master/search-engine-open-data/notebooks/get-to-know-a-dataset.ipynb
       AuthorName: Wilson Lin
       AuthorURL: https://github.com/wilsonzlin
