--- a/datasets/huj-herbarium.yaml
+++ b/datasets/huj-herbarium.yaml
@@ -3,7 +3,7 @@ Description:
   Our collection encompasses approximately one million vascular plant specimens from the Mediterranean and Middle East biodiversity hotspot, representing flora from Israel, Jordan, Hermon, Sinai, Egypt, the Caucasus, Arabia, North Africa, and throughout the Mediterranean basin. This scientifically significant repository includes published voucher specimens, original specimens used for "Flora Palaestina" illustrations, and critical references for the Israeli gene bank collections.
   The ongoing digitization process captures high-resolution images of each specimen while systematically incorporating label information into our computerized catalog. This virtual herbarium will democratize access to these valuable botanical resources, enabling global researchers to examine specimens in exceptional detail from anywhere in the world.
   Beyond preservation, this digital transformation unlocks new research possibilities through computational analysis of both visual specimen characteristics and associated metadata. The dataset will serve as a foundational resource for advancing botanical research, ecological modeling, taxonomic investigation, historical analysis, and numerous other scientific disciplines concerned with plant biodiversity in this ecologically and historically significant region.
-Documentation:
+Documentation: https://bit.ly/HUJVirtualHerbarium
 Contact: Eyal.Ben-Hur@mail.huji.ac.il
 ManagedBy: National Natural History Collections, The Hebrew University of Jerusalem
 UpdateFrequency: Monthly
@@ -35,6 +35,7 @@ DataAtWork:
 DeprecatedNotice:
 ADXCategories:
   -   Healthcare & Life Sciences Data
+
 
 
 
