Link to Radiant Earth's STAC browser, instead

--- a/datasets/rcm-ceos-ard.yaml
+++ b/datasets/rcm-ceos-ard.yaml
@@ -42,7 +42,7 @@ Resources:
     Region: ca-central-1
     Type: S3 Bucket
     Explore: 
-    - '[EODMS STAC for RCM CEOS ARD](https://www.eodms-sgdot.nrcan-rncan.gc.ca/stac/collections/rcm-ard/items/)'
+    - '[STAC for RCM CEOS ARD products](https://radiantearth.github.io/stac-browser/#/external/www.eodms-sgdot.nrcan-rncan.gc.ca/stac/collections/rcm-ard?.language=en)'
 DataAtWork:
   Tutorials:
     - Title: Workflows for accessing and manipulating RCM ARD SpatioTemporal Asset Catalog (STAC) in JupyterLab Python Notebooks - Flux de travail pour accéder et manipuler le catalogue d'actifs spatio-temporels (STAC) RCM ARD dans les notebooks Python JupyterLab
