Fix typo in the citation field of ARCO-OCEAN dataset configuration

--- a/datasets/ogs-arco-ocean.yaml
+++ b/datasets/ogs-arco-ocean.yaml
@@ -16,7 +16,7 @@ Tags:
   - physics
   - zarr
 License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
-Citation: "Campanella, S., Salon S., Querin, S., Bortolussi, L., and Stock, J.: ARCO-OCEAN: A dataset of physical properties of the ocean, waves, and sea ice, with hydrological and atmospheric forcing, optimized for machine learning, accessed on DD-MM-YYYY."
+Citation: "Campanella, S., Salon, S., Querin, S., Bortolussi, L., and Stock, J.: ARCO-OCEAN: A dataset of physical properties of the ocean, waves, and sea ice, with hydrological and atmospheric forcing, optimized for machine learning, accessed on DD-MM-YYYY."
 DataAtWork:
   Tutorials:
     - Title: Computing the Oceanic El Nino Index (ONI) with Xarray and ARCO-OCEAN
