update docs link

--- a/datasets/chammi-75.yaml
+++ b/datasets/chammi-75.yaml
@@ -7,7 +7,7 @@ Description: |
   high-resolution images curated from 75 diverse, publicly available biological studies. This dataset is useful to investigate and develop channel-adaptive models, 
   which could process microscopy images of varying technical specifications and regardless of the number of channels. By breaking the limitations of existing models, 
   CHAMMI-75 is an invaluable resource for creating the next generation of foundation models for image-based biological research.  
-Documentation:
+Documentation: https://github.com/CaicedoLab/CHAMMI-75
 Contact: Contact via email Juan Caicedo, juan.caicedo@wisc.edu
 ManagedBy: Morgridge Institute for Research
 UpdateFrequency: Every 2 years
