Add tutorial entry for CHAMMI-75 dataset

--- a/datasets/chammi-75.yaml
+++ b/datasets/chammi-75.yaml
@@ -31,12 +31,12 @@ Resources:
     Explore:
 DataAtWork:
   Tutorials:
-    - Title:
-      URL:
-      NotebookURL:
-      AuthorName:
+    - Title: Get To Know A Dataset: CHAMMI-75
+      URL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/get-to-know-a-dataset-template.ipynb
+      NotebookURL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/get-to-know-a-dataset-template.ipynb
+      AuthorName: Vidit Agrawal, Juan Caicedo
       AuthorURL:
-      Services:
+      Services: Getting to know a dataset
   Tools & Applications:
     - Title:
       URL:
