--- a/datasets/dandiarchive.yaml
+++ b/datasets/dandiarchive.yaml
@@ -8,7 +8,7 @@ Description: >
   [BIDS - Brain Imaging Data Structure](https://bids.neuroimaging.io/), and 
   [NIDM - Neuro Imaging Data Model](http://nidm.nidash.org/). Development of DANDI is 
   supported by the National Institute of Mental Health.
-Documentation: http://dandiarchive.org
+Documentation: https://dandiarchive.org
 Contact: '[DANDI Archive Help Desk](https://github.com/dandi/helpdesk/issues/new/choose)'
 ManagedBy: '[DANDI Archive](https://about.dandiarchive.org/team)'
 UpdateFrequency: New datasets deposited every month
