:sparkles: initial ARN for CBTN

--- a/datasets/radiant.yaml
+++ b/datasets/radiant.yaml
@@ -33,7 +33,11 @@ Tags:
   - whole genome sequencing
 License: "NIH Genomic Data Sharing Policy: https://grants.nih.gov/grants/guide/notice-files/not-od-14-124.html"
 Resources:
-
+- Description: "Children's Brain Tumor Network"
+  ARN: arn:aws:s3:::opendata-chop-study-us-east-1-prd-sd-bhjxbdqk
+  Region: us-east-1
+  Type: S3 Bucket
+  ControlledAccess: https://cbtn.org/
 
 DataAtWork:
   Tools & Applications:
