Add evaluation benchmarks entry to chammi-75.yaml
Added a new entry for running evaluation benchmarks with details.

--- a/datasets/chammi-75.yaml
+++ b/datasets/chammi-75.yaml
@@ -36,6 +36,12 @@ DataAtWork:
       AuthorName: Vidit Agrawal, Juan Caicedo
       AuthorURL:
       Services: Getting to know a dataset
+    - Title: Running evaluation benchmarks
+      URL: 
+      NotebookURL:
+      AuthorName: Vidit Agrawal, Juan Caicedo
+      Author URL:
+      Services: It will enable researchers to run state of the art benchmarks in the exploration of single cell self-supervised learning foundation models.
   Tools & Applications:
     - Title:
       URL:
