Update tutorial URLs in chammi-75.yaml

--- a/datasets/chammi-75.yaml
+++ b/datasets/chammi-75.yaml
@@ -31,14 +31,14 @@ Resources:
 DataAtWork:
   Tutorials:
     - Title: Get To Know A Dataset: CHAMMI-75
-      URL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/get-to-know-a-dataset-template.ipynb
+      URL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/
       NotebookURL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/get-to-know-a-dataset-template.ipynb
       AuthorName: Vidit Agrawal, Juan Caicedo
       AuthorURL:
       Services: Getting to know a dataset
     - Title: Running evaluation benchmarks
-      URL: 
-      NotebookURL:
+      URL:  https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/
+      NotebookURL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/running-benchmarks.ipynb
       AuthorName: Vidit Agrawal, Juan Caicedo
       Author URL:
       Services: It will enable researchers to run state of the art benchmarks in the exploration of single cell self-supervised learning foundation models.
