--- a/datasets/chammi-75.yaml
+++ b/datasets/chammi-75.yaml
@@ -36,7 +36,7 @@ DataAtWork:
       AuthorName: Vidit Agrawal, Juan Caicedo
       AuthorURL:
       Services: Getting to know a dataset
-    - Title: Running evaluation benchmarks
+    - Title: Running CHAMMI-75 Evaluation Benchmarks
       URL:  https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/
       NotebookURL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/running-benchmarks.ipynb
       AuthorName: Vidit Agrawal, Juan Caicedo
