Update CHAMMI-75 entry with source code details
Added source code reference for CHAMMI-75.

--- a/datasets/chammi-75.yaml
+++ b/datasets/chammi-75.yaml
@@ -43,9 +43,9 @@ DataAtWork:
       Author URL:
       Services: It will enable researchers to run state of the art benchmarks in the exploration of single cell self-supervised learning foundation models.
   Tools & Applications:
-    - Title:
-      URL:
-      AuthorName:
+    - Title: CHAMMI-75 Source Code
+      URL: https://github.com/CaicedoLab/CHAMMI-75
+      AuthorName: Vidit Agrawal
       AuthorURL:
   Publications:
     - Title:
