--- a/datasets/roa.yaml
+++ b/datasets/roa.yaml
@@ -37,11 +37,13 @@ DataAtWork:
     - Title: Reading RoA data
       URL: https://github.com/SEE-GEO/roa?tab=readme-ov-file#22-reading-roa-data
       AuthorName: Adrià Amell
-      Services: Amazon S3
+      Services:
+        - Amazon S3
     - Title: How to use the data
       URL: https://github.com/SEE-GEO/roa?tab=readme-ov-file#3-how-to-use-the-data
       AuthorName: Adrià Amell
-      Services: Amazon S3
+      Services:
+        - Amazon S3
   Publications:
     - Title: Probabilistic near real-time retrievals of Rain over Africa using deep learning
       URL: https://doi.org/10.1029/2025JD044595
