--- a/datasets/rcm-ceos-ard.yaml
+++ b/datasets/rcm-ceos-ard.yaml
@@ -66,3 +66,7 @@ DataAtWork:
       URL: https://dataspace.copernicus.eu/explore-data/data-collections/copernicus-contributing-missions/collections-description/COP-DEM
       AuthorName: European Space Agency (ESA)
       AuthorURL: https://www.esa.int/
+    - Title: RCM CEOS ARD Dataset on GEO.ca | Ensemble de données RCM CEOS ARD sur GEO.ca
+      URL: https://app.geo.ca/en-ca/map-browser/record/eodms-rcm-ard
+      AuthorName: Canada Centre for Remote Sensing | Centre canadien de télédétection
+      AuthorURL: https://natural-resources.canada.ca/science-data/science-research/research-centres/canada-centre-remote-sensing
