--- a/datasets/noaa-nws-naqfc-pds.yaml
+++ b/datasets/noaa-nws-naqfc-pds.yaml
@@ -38,6 +38,10 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Bucket](https://noaa-nws-naqfc-pds.s3.amazonaws.com/index.html)'
+    - Description: New data notifications for NAQFC, only Lambda and SQS protocols allowed
+    ARN: arn:aws:sns:us-east-1:709902155096:NewNWSAirQualityObject
+    Region: us-east-1
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
   Tools & Applications:
