--- a/datasets/allen-hmba-releases.yaml
+++ b/datasets/allen-hmba-releases.yaml
@@ -13,12 +13,10 @@ Tags:
   - gene expression
   - neurobiology
   - life sciences
-  - transcriptomics
-  - basal ganglia
+  - single cell transcriptomics
   - Mus musculus
-  - Macaca mulatta
-  - Callithrix jacchus
   - Homo sapiens
+  - non-human primate
 License: http://www.alleninstitute.org/legal/terms-use/
 Citation:
 Resources:
@@ -26,25 +24,23 @@ Resources:
     ARN: arn:aws:s3:::allen-hmba-releases
     Region: us-west-2
     Type: S3 bucket
-    Explore:
 DataAtWork:
   Tutorials:
-    - Title:
-      URL:
-      NotebookURL:
-      AuthorName:
-      AuthorURL:
-      Services:
+    - Title: Human-Mammalian Brain - Basal Ganglia - Data
+      URL: https://alleninstitute.github.io/abc_atlas_access/descriptions/HMBA-BG_dataset.html
+      AuthorName: Allen Institute for Brain Science
+      AuthorURL: www.alleninstitute.org
+    - Title: Human-Mammalian Brain - CCF Book
+      URL: https://alleninstitute.github.io/CCF-MAP/
+      AuthorName: Allen Institute for Brain Science
+      AuthorURL: www.alleninstitute.org
   Tools & Applications:
-    - Title:
-      URL:
-      AuthorName:
-      AuthorURL:
+    - Title: HMBA Basal Ganglia resources in Brain Knowledge Platform's Data Catalog
+      URL: https://knowledge.brain-map.org/data/POZ2HCPBT60DSDJ8UA7
+      AuthorName: Allen Institute for Brain Science
+      AuthorURL: www.alleninstitute.org
   Publications:
-    - Title:
-      URL:
-      AuthorName:
-      AuthorURL:
-DeprecatedNotice:
-ADXCategories:
-  -    
+    - Title: Cross-species consensus atlas of primate basal ganglia
+      URL:  Preprint in preparation.
+      AuthorName: Johansen N.J., Fu Y., Schmitz M., et al.
+      AuthorURL: https://alleninstitute.org/person/nelson-johansen/
