First commit of MAVEN data

--- a/tags.yaml
+++ b/tags.yaml
@@ -5,6 +5,7 @@
 - activity detection
 - activity recognition
 - aerial imagery
+- aeronomy
 - age
 - agriculture
 - air quality
@@ -268,6 +269,7 @@
 - marine mammals
 - marine navigation
 - market data
+- mars
 - materials science
 - media
 - medical image computing
