Add publication details.

--- a/datasets/eba.yaml
+++ b/datasets/eba.yaml
@@ -25,9 +25,9 @@ DataAtWork:
       AuthorName: Vahid Jalili
       AuthorURL: https://www.linkedin.com/in/jalilivahid
   Publications:
-    - Title:
-      URL:
-      AuthorName:
-      AuthorURL:
+    - Title: The Temporal Graph of Bitcoin Transactions
+      URL: https://arxiv.org/abs/2510.20028
+      AuthorName: Vahid Jalili
+      AuthorURL: www.linkedin.com/in/jalilivahid
 ADXCategories:
   - Financial Services Data
