Update AuthorURL to include 'https://' prefix

--- a/datasets/eba.yaml
+++ b/datasets/eba.yaml
@@ -28,6 +28,6 @@ DataAtWork:
     - Title: The Temporal Graph of Bitcoin Transactions
       URL: https://arxiv.org/abs/2510.20028
       AuthorName: Vahid Jalili
-      AuthorURL: www.linkedin.com/in/jalilivahid
+      AuthorURL: https://www.linkedin.com/in/jalilivahid
 ADXCategories:
   - Financial Services Data
