Update chammi.yaml with new source and publication info
Added CHAMMI Benchmarking source code and publication details.

--- a/datasets/chammi.yaml
+++ b/datasets/chammi.yaml
@@ -47,10 +47,14 @@ DataAtWork:
       URL: https://github.com/CaicedoLab/CHAMMI-75
       AuthorName: Vidit Agrawal
       AuthorURL:
+    - Title: CHAMMI Benchmarking Source Code
+      URL: https://github.com/chaudatascience/channel_adaptive_models
+      AuthorName: Chau Pham
+      AuthorURL: 
   Publications:
-    - Title:
-      URL:
-      AuthorName:
+    - Title: CHAMMI: A benchmark for channel-adaptive models in microscopy imaging
+      URL: https://neurips.cc/virtual/2023/poster/73620
+      AuthorName: Zitong Sam Chen, Chau Pham, Siqi Wang, Michael Doron, Nikita Moshkov, Bryan Plummer, Juan C. Caicedo
       AuthorURL:
 DeprecatedNotice:
 ADXCategories:
