ok: Update braidyn-bc_cued-lever-pull.yaml
Changing tags to reflect what is available on tags.yaml

--- a/datasets/braidyn-bc_cued-lever-pull.yaml
+++ b/datasets/braidyn-bc_cued-lever-pull.yaml
@@ -16,15 +16,13 @@ Contact: "Ken Nakae (ken.nakae@gmail.com)"
 ManagedBy: "[BraiDyn-BC Database Project](https://boatneck-weeder-7b7.notion.site/BraiDyn-BC-Database-303cf08c89f94d81bb2eaed4c3c50345)"
 UpdateFrequency: NA
 Tags:
-  - mouse
-  - behavior
-  - head fixation
-  - wide-field calcium imaging
-  - high-speed videography
-  - motor-skill learning
-  - operant conditioning
-  - sensory mapping
-  - behavioral tracking
+  - Mus musculus
+  - neuroscience
+  - calcium imaging
+  - video
+  - imaging
+  - life sciences
+  - aws-pds
 License: Creative Commons Attribution 4.0 International (CC-BY 4.0)
 Resources:
   - Description: "BraiDyn-BC: Cued lever-pull task dataset"
