ok: Update braidyn-bc_cued-lever-pull.yaml
format description

--- a/datasets/braidyn-bc_cued-lever-pull.yaml
+++ b/datasets/braidyn-bc_cued-lever-pull.yaml
@@ -25,7 +25,7 @@ Tags:
   - aws-pds
 License: Creative Commons Attribution 4.0 International (CC-BY 4.0)
 Resources:
-  - Description: "BraiDyn-BC: Cued lever-pull task dataset"
+  - Description: BraiDyn-BC: Cued lever-pull task dataset
     ARN: arn:aws:s3:::braidyn-bc-buckets
     Region: ap-northeast-1
     Type: S3 bucket
