ok: Update braidyn-bc_cued-lever-pull.yaml
update S3 bucket

--- a/datasets/braidyn-bc_cued-lever-pull.yaml
+++ b/datasets/braidyn-bc_cued-lever-pull.yaml
@@ -28,7 +28,7 @@ Resources:
   - Description: BraiDyn-BC - Cued lever-pull task dataset
     ARN: arn:aws:s3:::braidyn-bc-buckets
     Region: ap-northeast-1
-    Type: S3 bucket
+    Type: S3 Bucket
 DataAtWork:
   Tutorials:
     - Title: Detailed usage tutorials on Google Colab
