ok: Update allen-hmba-releases.yaml

--- a/datasets/allen-hmba-releases.yaml
+++ b/datasets/allen-hmba-releases.yaml
@@ -20,7 +20,7 @@ Tags:
 License: http://www.alleninstitute.org/legal/terms-use/
 Citation:
 Resources:
-  - Description: project data files in a public bucket
+  - Description: Project data files in a public bucket
     ARN: arn:aws:s3:::allen-hmba-releases
     Region: us-west-2
     Type: S3 bucket
@@ -44,3 +44,4 @@ DataAtWork:
       URL:  Preprint in preparation.
       AuthorName: Johansen N.J., Fu Y., Schmitz M., et al.
       AuthorURL: https://alleninstitute.org/person/nelson-johansen/
+
