--- a/datasets/ont_basemod_data.yaml
+++ b/datasets/ont_basemod_data.yaml
@@ -7,16 +7,14 @@ Contact:
 ManagedBy: "[CSIR-Centre for Cellular and Molecular Biology](https://www.ccmb.res.in/)"
 UpdateFrequency: Datasets will be updated periodically as additional data is generated.
 Tags:
-  - ONT
+  - aws-pds
+  - life sciences
   - nanopore
   - long read sequencing
-  - methylation
   - bioinformatics
-  - epigenetics
+  - epigenomics
   - benchmarking
-  - pod5
   - bam
-  - bed
 License: "[MIT License](https://opensource.org/license/mit)"
 Citation: "Please cite Kulkarni et al. Comprehensive benchmarking of tools for nanopore-based detection of DNA methylation. bioRxiv (2024). doi: https://doi.org/10.1101/2024.11.09.622763 when referencing the ONT methylation benchmarking datasets in publications."
 Resources:
