ok: Update allen-hmba-releases.yaml
updated tag

--- a/datasets/allen-hmba-releases.yaml
+++ b/datasets/allen-hmba-releases.yaml
@@ -13,7 +13,7 @@ Tags:
   - gene expression
   - neurobiology
   - life sciences
-  - single cell transcriptomics
+  - single-cell transcriptomics
   - Mus musculus
   - Homo sapiens
   - non-human primate
@@ -44,4 +44,5 @@ DataAtWork:
       URL:  Preprint in preparation.
       AuthorName: Johansen N.J., Fu Y., Schmitz M., et al.
       AuthorURL: https://alleninstitute.org/person/nelson-johansen/
+
 
