ok: Update ont_basemod_data.yaml
tags

--- a/datasets/ont_basemod_data.yaml
+++ b/datasets/ont_basemod_data.yaml
@@ -9,7 +9,7 @@ UpdateFrequency: Datasets will be updated periodically as additional data is gen
 Tags:
   - aws-pds
   - life sciences
-  - nanopore
+  - genomics
   - long read sequencing
   - bioinformatics
   - epigenomics
